Fix style: Cambios en el diseño responsive desktop y movil | subtitulo invisible en movil

--- a/styles.css
+++ b/styles.css
@@ -104,6 +104,6 @@ body {
 }
 
 
-.subtitulo {
+h2 {
     color: white;
 }
